# PypeScript

./: LICENSE  README.md  pyproject.toml  pytoyaml.py  setup.cfg
.github/workflows/: master.yml  pulldev.yml
samples/: one.py
src/pypescript/: cli.py  dev.py  parse.py  pytoyaml.py  typescrip_builder.py
